finished contact page
created contact page and stylize other small elements

--- a/about.html
+++ b/about.html
@@ -75,19 +75,21 @@
         </div>
       </div>
     </nav>
+
     <div class="container hero-section">
-      <div class="row justify-content-center">
+      <div class="row justify-content-center" style="margin-left: 150px">
         <div class="col-md text-center">
           <h1>Paulina Cruz</h1>
           <h2><small>front-end developer based in Mexico</small></h2>
           <br />
-          <p class="justified-text-left intro-text">
+          <p class="justified-text-left intro-text" id="paragraph">
             I always loved technology, since I was a little girl in a little
             town. My curiosity for it made me the perfect self taught candidate.
             I did a front-end course in SheCodes and it changed my life. I felt
             in love with coding and I plan to keep learning more about it.
           </p>
         </div>
+
         <div class="col-md ms-5">
           <img
             class="img-fluid mt-2 ms-5 face-shot p-1 shadow rounded"
@@ -98,6 +100,7 @@
         </div>
       </div>
     </div>
+
     <div class="container text-center">
       <div class="row">
         <div class="col">
@@ -110,6 +113,7 @@
             </a>
           </button>
         </div>
+
         <div class="col">
           <button type="button" class="btn custom-btn">
             <a
@@ -120,6 +124,7 @@
             </a>
           </button>
         </div>
+
         <div class="col">
           <button type="button" class="btn custom-btn">
             <a
@@ -137,7 +142,7 @@
       <div>
         <h1 class="fs-3">About my work</h1>
         <h2 class="fs-5">What exactly do I do?</h2>
-        <p>
+        <p id="paragraph">
           <li class="mb-1 fs-5">
             Give me the design of your dream web page and I will create it
           </li>
@@ -157,7 +162,7 @@
       <div>
         <h1 class="fs-3">A little about me</h1>
         <h2 class="fs-5">The basics...</h2>
-        <p>
+        <p id="paragraph">
           <li class="mb-1 fs-5">
             I'm 30 years old. Born in August, 1994. Of course I'm a Leo♌🔥
           </li>
@@ -201,7 +206,7 @@
           <div class="col">
             <h1 class="fs-3">Work related skills</h1>
             <h2 class="fs-5"></h2>
-            <p>
+            <p id="paragraph">
               <li class="mb-1 fs-6">Leadership & proactive</li>
               <li class="mb-1 fs-6">Polyvalent & efficient</li>
               <li class="mb-1 fs-6">Multitasker & adaptable</li>
@@ -234,7 +239,7 @@
           <div class="col">
             <h1 class="fs-3">Personality traits</h1>
             <h2 class="fs-5"></h2>
-            <p>
+            <p id="paragraph">
               <li class="mb-1 fs-6">Practical & rational</li>
               <li class="mb-1 fs-6">Resourceful & reliable</li>
               <li class="mb-1 fs-6">Confident & genuine</li>
@@ -273,7 +278,7 @@
       <div>
         <h1 class="fs-3">On a more personal note</h1>
         <h2 class="fs-5">A little about my soul</h2>
-        <p>
+        <p id="paragraph">
           <li class="mb-1 fs-5">I'm part of the LGBTQI+ community</li>
           <li class="mb-1 fs-5">I'm a feminist, anti-racist and activist</li>
           <li class="mb-1 fs-5">I'm an ecologist and animalist</li>
@@ -320,6 +325,7 @@
             <a href="contact.html" target="_self">Let's work together!</a>
           </button>
         </div>
+
         <div class="col">
           <button class="section-btn shadow rounded">
             <a href="work.html" target="_self">More of my work</a>
