--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,71 @@
       </div>
     </nav>
 
-    <h1 class="hero-section">contact</h1>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <h1 class="hero-section" style="margin-top: 80px">
+            Ask me anything!📬
+          </h1>
+        </div>
+      </div>
+    </div>
+
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <button type="button" class="btn custom-btn">
+            <a
+              class="social-net"
+              target="_blank"
+              href="mailto:paulinamc_micki@hotmail.com"
+              ><i class="fa-solid fa-envelope"></i>
+            </a>
+          </button>
+        </div>
+
+        <div class="col">
+          <div id="socialLinks">
+            <p>
+              <a
+                href="mailto:paulinamc_micki@hotmail.com"
+                target="_blank"
+                class="social-net"
+                >paulinamc_micki@hotmail.com</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <button type="button" class="btn custom-btn">
+            <a
+              class="social-net"
+              target="_blank"
+              href="mailto:pauwcruz@gmail.com"
+              ><i class="fa-brands fa-google"></i>
+            </a>
+          </button>
+        </div>
+
+        <div class="col">
+          <div id="socialLinks">
+            <p>
+              <a
+                href="mailto:pauwcruz@gmail.com"
+                target="_blank"
+                class="social-net"
+                >pauwcruz@gmail.com</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="container text-center">
       <div class="row">
@@ -90,6 +154,24 @@
             </a>
           </button>
         </div>
+
+        <div class="col">
+          <div id="socialLinks">
+            <p>
+              <a
+                href="https://www.linkedin.com/in/paulinamarincruz/"
+                target="_blank"
+                class="social-net"
+                >paulinamarincruz</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container text-center">
+      <div class="row">
         <div class="col">
           <button type="button" class="btn custom-btn">
             <a
@@ -100,6 +182,24 @@
             </a>
           </button>
         </div>
+
+        <div class="col">
+          <div id="socialLinks">
+            <p>
+              <a
+                href="https://www.facebook.com/paucruz5"
+                target="_blank"
+                class="social-net"
+                >@paucruz5</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container text-center">
+      <div class="row">
         <div class="col">
           <button type="button" class="btn custom-btn">
             <a
@@ -109,6 +209,19 @@
               ><i class="fa-brands fa-instagram"></i>
             </a>
           </button>
+        </div>
+
+        <div class="col">
+          <div id="socialLinks">
+            <p>
+              <a
+                href="https://www.instagram.com/paucruz5/"
+                target="_blank"
+                class="social-net"
+                >@paucruz5</a
+              >
+            </p>
+          </div>
         </div>
       </div>
     </div>
@@ -120,6 +233,7 @@
             <a href="work.html" target="_self">More of my work</a>
           </button>
         </div>
+
         <div class="col">
           <button class="section-btn shadow rounded">
             <a href="about.html" target="_self">Get to know me</a>
