--- a/index.html
+++ b/index.html
@@ -78,18 +78,20 @@
         </div>
       </div>
     </nav>
+
     <div class="container hero-section">
-      <div class="row justify-content-center">
+      <div class="row justify-content-center" style="margin-left: 150px">
         <div class="col-md text-center">
           <h1>Paulina Cruz</h1>
           <h2>front-end developer</h2>
           <br />
-          <p class="justified-text-left intro-text">
+          <p class="justified-text-left intro-text" id="paragraph">
             My aim is to create engaging digital experiences that delight users
             and meet business goals. I thrive on turning complex ideas into
             visually appealing and intuitive interfaces.
           </p>
         </div>
+
         <div class="col-md ms-5">
           <img
             class="img-fluid mt-2 ms-5 face-shot p-1 shadow rounded"
@@ -100,6 +102,7 @@
         </div>
       </div>
     </div>
+
     <div class="container text-center">
       <div class="row">
         <div class="col">
@@ -112,6 +115,7 @@
             </a>
           </button>
         </div>
+
         <div class="col">
           <button type="button" class="btn custom-btn">
             <a
@@ -122,6 +126,7 @@
             </a>
           </button>
         </div>
+
         <div class="col">
           <button type="button" class="btn custom-btn">
             <a
@@ -146,11 +151,12 @@
             id="leftImage"
           />
         </div>
+
         <div class="col-lg text-start">
           <div class="text-center text-lg-start">
             <h3 class="title-page">POEM SEARCHER</h3>
           </div>
-          <p class="justified-text-right">
+          <p class="justified-text-right" id="paragraph">
             Choose the theme of the poem, in any language you'd like and, using
             AI, the searcher will show you a beautiful poem written by any woman
             in the world.
@@ -171,7 +177,7 @@
           <div class="text-center text-lg-end">
             <h3 class="title-page">WEATHER APP</h3>
           </div>
-          <p class="justified-text-left">
+          <p class="justified-text-left" id="paragraph">
             Choose any city in the world and the searcher will show this week's
             weather in that city. It also shows the weather, date and time of
             your current location.
@@ -185,6 +191,7 @@
             </a>
           </div>
         </div>
+
         <div class="col-lg order-lg-1 order-0">
           <img
             src="images/weather-app.png"
@@ -206,11 +213,12 @@
             id="leftImage"
           />
         </div>
+
         <div class="col-lg text-start">
           <div class="text-center text-lg-start">
             <h3 class="title-page">WORLD CLOCK</h3>
           </div>
-          <p class="justified-text-right">
+          <p class="justified-text-right" id="paragraph">
             This searcher shows you the full date and time in a digital clock,
             of nine default cities all around the world. One of those cities is
             your current location.
@@ -234,11 +242,13 @@
             <a href="contact.html" target="_self">Let's work together!</a>
           </button>
         </div>
+
         <div class="col">
           <button class="section-btn shadow rounded">
             <a href="work.html" target="_self">More of my work</a>
           </button>
         </div>
+
         <div class="col">
           <button class="section-btn shadow rounded">
             <a href="about.html" target="_self">Get to know me</a>
