--- a/work.html
+++ b/work.html
@@ -76,7 +76,9 @@
       </div>
     </nav>
 
-    <h1 class="hero-section text-center">🤓 Web pages made by me! 🤓</h1>
+    <h1 class="hero-section text-center" style="margin-bottom: 80px">
+      🤓 Web pages made by me! 🤓
+    </h1>
 
     <div class="container work-examples">
       <div class="row my-5 justify-content-center">
@@ -89,11 +91,12 @@
             id="leftImage"
           />
         </div>
+
         <div class="col-lg text-start">
           <div class="text-center text-lg-start">
             <h3 class="title-page">POEM SEARCHER</h3>
           </div>
-          <p class="justified-text-right">
+          <p class="justified-text-right" id="paragraph">
             Choose the theme of the poem, in any language you'd like and, using
             AI, the searcher will show you a beautiful poem written by any woman
             in the world.
@@ -114,7 +117,7 @@
           <div class="text-center text-lg-end">
             <h3 class="title-page">WEATHER APP</h3>
           </div>
-          <p class="justified-text-left">
+          <p class="justified-text-left" id="paragraph">
             Choose any city in the world and the searcher will show this week's
             weather in that city. It also shows the weather, date and time of
             your current location.
@@ -128,6 +131,7 @@
             </a>
           </div>
         </div>
+
         <div class="col-lg order-lg-1 order-0">
           <img
             src="images/weather-app.png"
@@ -149,11 +153,12 @@
             id="leftImage"
           />
         </div>
+
         <div class="col-lg text-start">
           <div class="text-center text-lg-start">
             <h3 class="title-page">WORLD CLOCK</h3>
           </div>
-          <p class="justified-text-right">
+          <p class="justified-text-right" id="paragraph">
             This searcher shows you the full date and time in a digital clock,
             of nine default cities all around the world. One of those cities is
             your current location.
@@ -177,6 +182,7 @@
             <a href="contact.html" target="_self">Let's work together!</a>
           </button>
         </div>
+
         <div class="col">
           <button class="section-btn shadow rounded">
             <a href="about.html" target="_self">Get to know me</a>
