--- a/about.html
+++ b/about.html
@@ -39,22 +39,24 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-green fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">PAU</a>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="about.html"
+          ><img src="images/PMC.png" width="50" height="50" alt="logo"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <div class="navbar-toggler-icon"></div>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div
           class="collapse navbar-collapse justify-content-center"
-          id="navbarNav"
+          id="navbarSupportedContent"
         >
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -139,16 +141,21 @@
     </div>
 
     <div class="about-myself">
-      <div>
-        <h1 class="fs-3">About my work</h1>
-        <h2 class="fs-5">What exactly do I do?</h2>
+      <div class="container">
+        <div class="row text-center">
+          <div class="col">
+            <h1 class="fs-3">About my work</h1>
+            <h2 class="fs-5">What exactly do I do?</h2>
+          </div>
+          <div class="col"></div>
+        </div>
         <p id="paragraph">
           <li class="mb-1 fs-5">
             Give me the design of your dream web page and I will create it
           </li>
           <li class="mb-1 fs-5">
-            I can give you some pointers on where to improve but it's up to you
-            if you take them
+            Honestly? Whatever you want, we can talk about it and see if I'm a
+            good fit
           </li>
           <li class="mb-1 fs-5">I use Visual Studio Code</li>
           <li class="mb-1 fs-5">I use JavaScript</li>
@@ -159,9 +166,14 @@
       </div>
 
       <br />
-      <div>
-        <h1 class="fs-3">A little about me</h1>
-        <h2 class="fs-5">The basics...</h2>
+      <div class="container">
+        <div class="row text-center">
+          <div class="col">
+            <h1 class="fs-3">A little about me</h1>
+            <h2 class="fs-5">The basics...</h2>
+          </div>
+          <div class="col"></div>
+        </div>
         <p id="paragraph">
           <li class="mb-1 fs-5">
             I'm 30 years old. Born in August, 1994. Of course I'm a Leo♌🔥
@@ -266,8 +278,11 @@
                 Bodily-Kinesthetic, Musical & Naturalist intelligence
               </li>
               <li class="mb-1 fs-6">
-                Intrapersonal & Interpersonal intelligence (Emotional
-                Intelligence)
+                <a href="#" id="intraIntel">Intrapersonal</a> &
+                <a href="#" id="interIntel">Interpersonal</a> intelligence
+              </li>
+              <li class="mb-1 fs-6">
+                <a href="#" id="emoIntel">Emotional Intelligence</a>
               </li>
             </p>
           </div>
@@ -275,14 +290,27 @@
       </div>
 
       <br />
-      <div>
-        <h1 class="fs-3">On a more personal note</h1>
-        <h2 class="fs-5">A little about my soul</h2>
+      <div class="container">
+        <div class="row text-center">
+          <div class="col">
+            <h1 class="fs-3">On a more personal note...</h1>
+            <h2 class="fs-5">A little about my soul</h2>
+          </div>
+          <div class="col"></div>
+        </div>
         <p id="paragraph">
-          <li class="mb-1 fs-5">I'm part of the LGBTQI+ community</li>
-          <li class="mb-1 fs-5">I'm a feminist, anti-racist and activist</li>
+          <li class="mb-1 fs-5">
+            I'm part of the <a href="#" id="lgbtDef">LGBTQIA+</a> and
+            <a href="#" id="polyDef">polyamorous</a> community
+          </li>
+          <li class="mb-1 fs-5">
+            I'm a <a href="#" id="feministDef">feminist</a>, anti-racist and
+            activist
+          </li>
           <li class="mb-1 fs-5">I'm an ecologist and animalist</li>
-          <li class="mb-1 fs-5">I can't live without music and cinema</li>
+          <li class="mb-1 fs-5">
+            I can't live without music, cinema, books and art
+          </li>
           <li class="mb-1 fs-5">Love gives me purpose</li>
           <li class="mb-1 fs-5">Strong family values</li>
         </p>
@@ -340,7 +368,57 @@
         .getElementById("inclusiveLanguage")
         .addEventListener("click", function (event) {
           event.preventDefault();
-          window.alert("You clicked!");
+          window.alert(
+            "Inclusive language avoids words, phrases, or tones that exclude or discriminate against people. It's also known as non-discriminatory language. E.g. the use of gender-neutral terms, etc."
+          );
+        });
+      document
+        .getElementById("intraIntel")
+        .addEventListener("click", function (event) {
+          event.preventDefault();
+          window.alert(
+            "Intrapersonal intelligence is the ability to understand oneself, including one's thoughts, emotions, and motivations. It also involves using this understanding to make decisions and communicate."
+          );
+        });
+      document
+        .getElementById("interIntel")
+        .addEventListener("click", function (event) {
+          event.preventDefault();
+          window.alert(
+            "Interpersonal intelligence is the ability to understand, communicate and interact with others: manage relationships, understand their needs, feelings, behavior, etc. "
+          );
+        });
+      document
+        .getElementById("emoIntel")
+        .addEventListener("click", function (event) {
+          event.preventDefault();
+          window.alert(
+            "Emotional intelligence is the ability to understand and manage your own emotions, as well as the emotions of others. It also involves being able to relate to others and solve conflicts."
+          );
+        });
+      document
+        .getElementById("lgbtDef")
+        .addEventListener("click", function (event) {
+          event.preventDefault();
+          window.alert(
+            "LGBTQIA+ is an acronym that stands for lesbian, gay, bisexual, transgender, queer, intersex, and asexual. The + represents other identities that are not included in the acronym."
+          );
+        });
+      document
+        .getElementById("polyDef")
+        .addEventListener("click", function (event) {
+          event.preventDefault();
+          window.alert(
+            "Literally means: many loves. People who desire or have multiple ongoing intimate relationships, whether sexual or romantic, with the consent of everyone involved. Polyamorists want to have deeper connections with multiple people, through love, affection and communication."
+          );
+        });
+      document
+        .getElementById("feministDef")
+        .addEventListener("click", function (event) {
+          event.preventDefault();
+          window.alert(
+            "Any person who believes in the social, political, and economic equality of all genders, regardless of race, ethnicity, socioeconomic class, religion, ability, and sexual orientation."
+          );
         });
     </script>
   </body>
