--- a/index.html
+++ b/index.html
@@ -39,22 +39,24 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-green fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">PAU</a>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="about.html"
+          ><img src="images/PMC.png" width="50" height="50" alt="logo"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <div class="navbar-toggler-icon"></div>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div
           class="collapse navbar-collapse justify-content-center"
-          id="navbarNav"
+          id="navbarSupportedContent"
         >
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -79,182 +81,180 @@
       </div>
     </nav>
 
-    <div class="blur-container">
-      <div class="container hero-section">
-        <div class="row justify-content-center" style="margin-left: 150px">
-          <div class="col-md text-center">
-            <h1>Paulina Cruz</h1>
-            <h2>front-end developer</h2>
-            <br />
-            <p class="justified-text-left intro-text" id="paragraph">
-              My aim is to create engaging digital experiences that delight
-              users and meet business goals. I thrive on turning complex ideas
-              into visually appealing and intuitive interfaces.
-            </p>
-          </div>
+    <div class="container hero-section">
+      <div class="row justify-content-center" style="margin-left: 150px">
+        <div class="col-md text-center">
+          <h1>Paulina Cruz</h1>
+          <h2>front-end developer</h2>
+          <br />
+          <p class="justified-text-left intro-text" id="paragraph">
+            My aim is to create engaging digital experiences that delight users
+            and meet business goals. I thrive on turning complex ideas into
+            visually appealing and intuitive interfaces.
+          </p>
+        </div>
 
-          <div class="col-md ms-5">
-            <img
-              class="img-fluid mt-2 ms-5 face-shot p-1 shadow rounded"
-              src="images/Paulina.png"
-              alt="Paulina-faceshot"
-              width="220"
-            />
+        <div class="col-md ms-5">
+          <img
+            class="img-fluid mt-2 ms-5 face-shot p-1 shadow rounded"
+            src="images/Paulina.png"
+            alt="Paulina-faceshot"
+            width="220"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <button type="button" class="btn custom-btn">
+            <a
+              class="social-net"
+              target="_blank"
+              href="https://www.linkedin.com/in/paulinamarincruz/"
+              ><i class="fa-brands fa-linkedin"></i>
+            </a>
+          </button>
+        </div>
+
+        <div class="col">
+          <button type="button" class="btn custom-btn">
+            <a
+              class="social-net"
+              target="_blank"
+              href="https://www.facebook.com/paucruz5"
+              ><i class="fa-brands fa-facebook"></i>
+            </a>
+          </button>
+        </div>
+
+        <div class="col">
+          <button type="button" class="btn custom-btn">
+            <a
+              class="social-net"
+              target="_blank"
+              href="https://www.instagram.com/paucruz5/"
+              ><i class="fa-brands fa-instagram"></i>
+            </a>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="container work-examples">
+      <div class="row my-5 justify-content-center">
+        <div class="col-lg text-end">
+          <img
+            src="images/women-poems.png"
+            alt="Web page that finds poems written by women"
+            width="440"
+            class="work-image p-1 shadow rounded"
+            id="leftImage"
+          />
+        </div>
+
+        <div class="col-lg text-start">
+          <div class="text-center text-lg-start">
+            <h3 class="title-page">POEM SEARCHER</h3>
+          </div>
+          <p class="justified-text-right" id="paragraph">
+            Choose the theme of the poem, in any language you'd like and, using
+            AI, the searcher will show you a beautiful poem written by any woman
+            in the world.
+          </p>
+          <div class="page-button text-center text-lg-start">
+            <a
+              href="https://women-poems-searcher.netlify.app/"
+              target="_blank"
+              class="btn btn-link"
+              >Poem Searcher
+            </a>
           </div>
         </div>
       </div>
 
-      <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            <button type="button" class="btn custom-btn">
-              <a
-                class="social-net"
-                target="_blank"
-                href="https://www.linkedin.com/in/paulinamarincruz/"
-                ><i class="fa-brands fa-linkedin"></i>
-              </a>
-            </button>
+      <div class="row my-5 justify-content-center">
+        <div class="col-lg text-end order-lg-0 order-1">
+          <div class="text-center text-lg-end">
+            <h3 class="title-page">WEATHER APP</h3>
           </div>
+          <p class="justified-text-left" id="paragraph">
+            Choose any city in the world and the searcher will show this week's
+            weather in that city. It also shows the weather, date and time of
+            your current location.
+          </p>
+          <div class="page-button text-center text-lg-end">
+            <a
+              href="https://weather-pc.netlify.app/"
+              target="_blank"
+              class="btn btn-link"
+              >Weather App
+            </a>
+          </div>
+        </div>
 
-          <div class="col">
-            <button type="button" class="btn custom-btn">
-              <a
-                class="social-net"
-                target="_blank"
-                href="https://www.facebook.com/paucruz5"
-                ><i class="fa-brands fa-facebook"></i>
-              </a>
-            </button>
-          </div>
-
-          <div class="col">
-            <button type="button" class="btn custom-btn">
-              <a
-                class="social-net"
-                target="_blank"
-                href="https://www.instagram.com/paucruz5/"
-                ><i class="fa-brands fa-instagram"></i>
-              </a>
-            </button>
-          </div>
+        <div class="col-lg order-lg-1 order-0">
+          <img
+            src="images/weather-app.png"
+            alt="Web page that shows you the weather in any city"
+            width="430"
+            class="work-image p-1 shadow rounded"
+            id="rightImage"
+          />
         </div>
       </div>
 
-      <div class="container work-examples">
-        <div class="row my-5 justify-content-center">
-          <div class="col-lg text-end">
-            <img
-              src="images/women-poems.png"
-              alt="Web page that finds poems written by women"
-              width="440"
-              class="work-image p-1 shadow rounded"
-              id="leftImage"
-            />
-          </div>
-
-          <div class="col-lg text-start">
-            <div class="text-center text-lg-start">
-              <h3 class="title-page">POEM SEARCHER</h3>
-            </div>
-            <p class="justified-text-right" id="paragraph">
-              Choose the theme of the poem, in any language you'd like and,
-              using AI, the searcher will show you a beautiful poem written by
-              any woman in the world.
-            </p>
-            <div class="page-button text-center text-lg-start">
-              <a
-                href="https://women-poems-searcher.netlify.app/"
-                target="_blank"
-                class="btn btn-link"
-                >Poem Searcher
-              </a>
-            </div>
-          </div>
+      <div class="row my-5 justify-content-center">
+        <div class="col-lg text-end">
+          <img
+            src="images/world-clock.png"
+            alt="Web page that shows the time of a few cities"
+            width="440"
+            class="work-image p-1 shadow rounded"
+            id="leftImage"
+          />
         </div>
 
-        <div class="row my-5 justify-content-center">
-          <div class="col-lg text-end order-lg-0 order-1">
-            <div class="text-center text-lg-end">
-              <h3 class="title-page">WEATHER APP</h3>
-            </div>
-            <p class="justified-text-left" id="paragraph">
-              Choose any city in the world and the searcher will show this
-              week's weather in that city. It also shows the weather, date and
-              time of your current location.
-            </p>
-            <div class="page-button text-center text-lg-end">
-              <a
-                href="https://weather-pc.netlify.app/"
-                target="_blank"
-                class="btn btn-link"
-                >Weather App
-              </a>
-            </div>
+        <div class="col-lg text-start">
+          <div class="text-center text-lg-start">
+            <h3 class="title-page">WORLD CLOCK</h3>
           </div>
-
-          <div class="col-lg order-lg-1 order-0">
-            <img
-              src="images/weather-app.png"
-              alt="Web page that shows you the weather in any city"
-              width="430"
-              class="work-image p-1 shadow rounded"
-              id="rightImage"
-            />
-          </div>
-        </div>
-
-        <div class="row my-5 justify-content-center">
-          <div class="col-lg text-end">
-            <img
-              src="images/world-clock.png"
-              alt="Web page that shows the time of a few cities"
-              width="440"
-              class="work-image p-1 shadow rounded"
-              id="leftImage"
-            />
-          </div>
-
-          <div class="col-lg text-start">
-            <div class="text-center text-lg-start">
-              <h3 class="title-page">WORLD CLOCK</h3>
-            </div>
-            <p class="justified-text-right" id="paragraph">
-              This searcher shows you the full date and time in a digital clock,
-              of nine default cities all around the world. One of those cities
-              is your current location.
-            </p>
-            <div class="page-button text-center text-lg-start">
-              <a
-                href="https://world-clock-pc.netlify.app/index.html"
-                target="_blank"
-                class="btn btn-link"
-                >World clock
-              </a>
-            </div>
+          <p class="justified-text-right" id="paragraph">
+            This searcher shows you the full date and time in a digital clock,
+            of nine default cities all around the world. One of those cities is
+            your current location.
+          </p>
+          <div class="page-button text-center text-lg-start">
+            <a
+              href="https://world-clock-pc.netlify.app/index.html"
+              target="_blank"
+              class="btn btn-link"
+              >World clock
+            </a>
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            <button class="section-btn shadow rounded">
-              <a href="contact.html" target="_self">Let's work together!</a>
-            </button>
-          </div>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <button class="section-btn shadow rounded">
+            <a href="contact.html" target="_self">Let's work together!</a>
+          </button>
+        </div>
 
-          <div class="col">
-            <button class="section-btn shadow rounded">
-              <a href="work.html" target="_self">More of my work</a>
-            </button>
-          </div>
+        <div class="col">
+          <button class="section-btn shadow rounded">
+            <a href="work.html" target="_self">More of my work</a>
+          </button>
+        </div>
 
-          <div class="col">
-            <button class="section-btn shadow rounded">
-              <a href="about.html" target="_self">Get to know me</a>
-            </button>
-          </div>
+        <div class="col">
+          <button class="section-btn shadow rounded">
+            <a href="about.html" target="_self">Get to know me!</a>
+          </button>
         </div>
       </div>
     </div>
