--- a/work.html
+++ b/work.html
@@ -39,22 +39,24 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-green fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">PAU</a>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="about.html"
+          ><img src="images/PMC.png" width="50" height="50" alt="logo"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <div class="navbar-toggler-icon"></div>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div
           class="collapse navbar-collapse justify-content-center"
-          id="navbarNav"
+          id="navbarSupportedContent"
         >
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -77,7 +79,7 @@
     </nav>
 
     <h1 class="hero-section text-center" style="margin-bottom: 80px">
-      🤓 Web pages made by me! 🤓
+      Web pages made by me!
     </h1>
 
     <div class="container work-examples">
@@ -185,7 +187,7 @@
 
         <div class="col">
           <button class="section-btn shadow rounded">
-            <a href="about.html" target="_self">Get to know me</a>
+            <a href="about.html" target="_self">Get to know me!</a>
           </button>
         </div>
       </div>
