--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-green fixed-top">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand" href="about.html"
           ><img src="images/PMC.png" width="50" height="50" alt="logo"
         /></a>
@@ -81,9 +81,9 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <h1 class="hero-section" style="margin-top: 80px">
+          <p class="hero-heading text-center" style="margin-bottom: 80px">
             Ask me anything!📬
-          </h1>
+          </p>
         </div>
       </div>
     </div>
@@ -91,7 +91,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <button type="button" class="btn custom-btn">
+          <button type="button" class="btn contact-btn">
             <a
               class="social-net"
               target="_blank"
@@ -102,16 +102,14 @@
         </div>
 
         <div class="col">
-          <div id="socialLinks">
-            <p>
-              <a
-                href="mailto:paulinamc_micki@hotmail.com"
-                target="_blank"
-                class="social-net"
-                >paulinamc_micki@hotmail.com</a
-              >
-            </p>
-          </div>
+          <p id="socialLinks">
+            <a
+              href="mailto:paulinamc_micki@hotmail.com"
+              target="_blank"
+              class="social-net"
+              >paulinamc_micki@hotmail.com</a
+            >
+          </p>
         </div>
       </div>
     </div>
@@ -119,7 +117,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <button type="button" class="btn custom-btn">
+          <button type="button" class="btn contact-btn">
             <a
               class="social-net"
               target="_blank"
@@ -130,16 +128,14 @@
         </div>
 
         <div class="col">
-          <div id="socialLinks">
-            <p>
-              <a
-                href="mailto:pauwcruz@gmail.com"
-                target="_blank"
-                class="social-net"
-                >pauwcruz@gmail.com</a
-              >
-            </p>
-          </div>
+          <p id="socialLinks">
+            <a
+              href="mailto:pauwcruz@gmail.com"
+              target="_blank"
+              class="social-net"
+              >pauwcruz@gmail.com</a
+            >
+          </p>
         </div>
       </div>
     </div>
@@ -147,7 +143,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <button type="button" class="btn custom-btn">
+          <button type="button" class="btn contact-btn">
             <a
               class="social-net"
               target="_blank"
@@ -158,16 +154,14 @@
         </div>
 
         <div class="col">
-          <div id="socialLinks">
-            <p>
-              <a
-                href="https://www.linkedin.com/in/paulinamarincruz/"
-                target="_blank"
-                class="social-net"
-                >paulinamarincruz</a
-              >
-            </p>
-          </div>
+          <p id="socialLinks">
+            <a
+              href="https://www.linkedin.com/in/paulinamarincruz/"
+              target="_blank"
+              class="social-net"
+              >paulinamarincruz</a
+            >
+          </p>
         </div>
       </div>
     </div>
@@ -175,7 +169,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <button type="button" class="btn custom-btn">
+          <button type="button" class="btn contact-btn">
             <a
               class="social-net"
               target="_blank"
@@ -186,16 +180,14 @@
         </div>
 
         <div class="col">
-          <div id="socialLinks">
-            <p>
-              <a
-                href="https://www.facebook.com/paucruz5"
-                target="_blank"
-                class="social-net"
-                >@paucruz5</a
-              >
-            </p>
-          </div>
+          <p id="socialLinks">
+            <a
+              href="https://www.facebook.com/paucruz5"
+              target="_blank"
+              class="social-net"
+              >@paucruz5</a
+            >
+          </p>
         </div>
       </div>
     </div>
@@ -203,7 +195,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <button type="button" class="btn custom-btn">
+          <button type="button" class="btn contact-btn">
             <a
               class="social-net"
               target="_blank"
@@ -214,16 +206,14 @@
         </div>
 
         <div class="col">
-          <div id="socialLinks">
-            <p>
-              <a
-                href="https://www.instagram.com/paucruz5/"
-                target="_blank"
-                class="social-net"
-                >@paucruz5</a
-              >
-            </p>
-          </div>
+          <p id="socialLinks">
+            <a
+              href="https://www.instagram.com/paucruz5/"
+              target="_blank"
+              class="social-net"
+              >@paucruz5</a
+            >
+          </p>
         </div>
       </div>
     </div>
@@ -232,16 +222,18 @@
       <div class="row">
         <div class="col">
           <button class="section-btn shadow rounded">
-            <a href="work.html" target="_self">More of my work</a>
+            <a href="about.html" target="_self">Get to know me!</a>
           </button>
         </div>
 
         <div class="col">
           <button class="section-btn shadow rounded">
-            <a href="about.html" target="_self">Get to know me!</a>
+            <a href="work.html" target="_self">More of my work</a>
           </button>
         </div>
       </div>
     </div>
+
+    <script src="functions.js"></script>
   </body>
 </html>
