--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-green fixed-top">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand" href="about.html"
           ><img src="images/PMC.png" width="50" height="50" alt="logo"
         /></a>
@@ -82,35 +82,37 @@
     </nav>
 
     <div class="container hero-section">
-      <div class="row justify-content-center" style="margin-left: 150px">
-        <div class="col-md text-center">
+      <div class="row justify-content-center">
+        <div class="col-lg"></div>
+        <div class="col-lg text-center">
           <h1>Paulina Cruz</h1>
           <h2>front-end developer</h2>
           <br />
           <p class="justified-text-left intro-text" id="paragraph">
-            My aim is to create engaging digital experiences that delight users
-            and meet business goals. I thrive on turning complex ideas into
-            visually appealing and intuitive interfaces.
+            I aim to create engaging digital experiences that delight users and
+            meet business goals. I thrive on turning complex ideas into visually
+            appealing and intuitive interfaces.
           </p>
         </div>
 
-        <div class="col-md ms-5">
+        <div class="col-lg">
           <img
-            class="img-fluid mt-2 ms-5 face-shot p-1 shadow rounded"
+            class="img-fluid ms-2 face-shot p-1 shadow rounded"
             src="images/Paulina.png"
             alt="Paulina-faceshot"
             width="220"
           />
         </div>
+        <div class="col-lg"></div>
       </div>
     </div>
 
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <button type="button" class="btn custom-btn">
+          <button type="button" class="btn social-btn">
             <a
-              class="social-net"
+              class="social-link"
               target="_blank"
               href="https://www.linkedin.com/in/paulinamarincruz/"
               ><i class="fa-brands fa-linkedin"></i>
@@ -119,9 +121,9 @@
         </div>
 
         <div class="col">
-          <button type="button" class="btn custom-btn">
+          <button type="button" class="btn social-btn">
             <a
-              class="social-net"
+              class="social-link"
               target="_blank"
               href="https://www.facebook.com/paucruz5"
               ><i class="fa-brands fa-facebook"></i>
@@ -130,9 +132,9 @@
         </div>
 
         <div class="col">
-          <button type="button" class="btn custom-btn">
+          <button type="button" class="btn social-btn">
             <a
-              class="social-net"
+              class="social-link"
               target="_blank"
               href="https://www.instagram.com/paucruz5/"
               ><i class="fa-brands fa-instagram"></i>
@@ -241,7 +243,7 @@
       <div class="row">
         <div class="col">
           <button class="section-btn shadow rounded">
-            <a href="contact.html" target="_self">Let's work together!</a>
+            <a href="about.html" target="_self">Get to know me!</a>
           </button>
         </div>
 
@@ -253,7 +255,7 @@
 
         <div class="col">
           <button class="section-btn shadow rounded">
-            <a href="about.html" target="_self">Get to know me!</a>
+            <a href="contact.html" target="_self">Let's work together!</a>
           </button>
         </div>
       </div>
