--- a/work.html
+++ b/work.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-green fixed-top">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand" href="about.html"
           ><img src="images/PMC.png" width="50" height="50" alt="logo"
         /></a>
@@ -78,9 +78,9 @@
       </div>
     </nav>
 
-    <h1 class="hero-section text-center" style="margin-bottom: 80px">
+    <p class="hero-heading text-center" style="margin-bottom: 80px">
       Web pages made by me!
-    </h1>
+    </p>
 
     <div class="container work-examples">
       <div class="row my-5 justify-content-center">
@@ -181,16 +181,17 @@
       <div class="row">
         <div class="col">
           <button class="section-btn shadow rounded">
-            <a href="contact.html" target="_self">Let's work together!</a>
+            <a href="about.html" target="_self">Get to know me!</a>
           </button>
         </div>
 
         <div class="col">
           <button class="section-btn shadow rounded">
-            <a href="about.html" target="_self">Get to know me!</a>
+            <a href="contact.html" target="_self">Let's work together!</a>
           </button>
         </div>
       </div>
     </div>
+    <script src="functions.js"></script>
   </body>
 </html>
