--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="container hero-section">
       <div class="row justify-content-center">
         <div class="col-lg"></div>
-        <div class="col-lg text-center">
+        <div class="col-lg text-center" style="margin-bottom: 100px">
           <h1>Paulina Cruz</h1>
           <h2>front-end developer</h2>
           <br />
@@ -107,43 +107,6 @@
       </div>
     </div>
 
-    <div class="container text-center">
-      <div class="row">
-        <div class="col">
-          <button type="button" class="btn social-btn">
-            <a
-              class="social-link"
-              target="_blank"
-              href="https://www.linkedin.com/in/paulinamarincruz/"
-              ><i class="fa-brands fa-linkedin"></i>
-            </a>
-          </button>
-        </div>
-
-        <div class="col">
-          <button type="button" class="btn social-btn">
-            <a
-              class="social-link"
-              target="_blank"
-              href="https://www.facebook.com/paucruz5"
-              ><i class="fa-brands fa-facebook"></i>
-            </a>
-          </button>
-        </div>
-
-        <div class="col">
-          <button type="button" class="btn social-btn">
-            <a
-              class="social-link"
-              target="_blank"
-              href="https://www.instagram.com/paucruz5/"
-              ><i class="fa-brands fa-instagram"></i>
-            </a>
-          </button>
-        </div>
-      </div>
-    </div>
-
     <div class="container work-examples">
       <div class="row my-5 justify-content-center">
         <div class="col-lg text-end">
@@ -156,7 +119,7 @@
           />
         </div>
 
-        <div class="col-lg text-start">
+        <div class="col-lg text-start" style="margin-bottom: 40px">
           <div class="text-center text-lg-start">
             <h3 class="title-page">POEM SEARCHER</h3>
           </div>
@@ -177,7 +140,10 @@
       </div>
 
       <div class="row my-5 justify-content-center">
-        <div class="col-lg text-end order-lg-0 order-1">
+        <div
+          class="col-lg text-end order-lg-0 order-1"
+          style="margin-bottom: 40px"
+        >
           <div class="text-center text-lg-end">
             <h3 class="title-page">WEATHER APP</h3>
           </div>
@@ -259,6 +225,50 @@
           </button>
         </div>
       </div>
+      <footer>
+        <div class="email-link">
+          <a href="mailto:paulinamc_micki@hotmail.com"
+            >paulinamc_micki@hotmail.com</a
+          >
+        </div>
+
+        <div class="container text-center">
+          <div class="row">
+            <div class="col">
+              <button type="button" class="btn social-btn">
+                <a
+                  class="social-link"
+                  target="_blank"
+                  href="https://www.linkedin.com/in/paulinamarincruz/"
+                  ><i class="fa-brands fa-linkedin"></i>
+                </a>
+              </button>
+            </div>
+
+            <div class="col">
+              <button type="button" class="btn social-btn">
+                <a
+                  class="social-link"
+                  target="_blank"
+                  href="https://www.facebook.com/paucruz5"
+                  ><i class="fa-brands fa-facebook"></i>
+                </a>
+              </button>
+            </div>
+
+            <div class="col">
+              <button type="button" class="btn social-btn">
+                <a
+                  class="social-link"
+                  target="_blank"
+                  href="https://www.instagram.com/paucruz5/"
+                  ><i class="fa-brands fa-instagram"></i>
+                </a>
+              </button>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
