--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
       </div>
     </nav>
 
-    <div class="container hero-section">
+    <div class="container hero-section" style="margin-bottom: 100px">
       <div class="row justify-content-center">
         <div class="col-lg"></div>
         <div class="col-lg text-center">
@@ -102,43 +102,6 @@
           />
         </div>
         <div class="col-lg"></div>
-      </div>
-    </div>
-
-    <div class="container text-center">
-      <div class="row">
-        <div class="col">
-          <button type="button" class="btn social-btn">
-            <a
-              class="social-link"
-              target="_blank"
-              href="https://www.linkedin.com/in/paulinamarincruz/"
-              ><i class="fa-brands fa-linkedin"></i>
-            </a>
-          </button>
-        </div>
-
-        <div class="col">
-          <button type="button" class="btn social-btn">
-            <a
-              class="social-link"
-              target="_blank"
-              href="https://www.facebook.com/paucruz5"
-              ><i class="fa-brands fa-facebook"></i>
-            </a>
-          </button>
-        </div>
-
-        <div class="col">
-          <button type="button" class="btn social-btn">
-            <a
-              class="social-link"
-              target="_blank"
-              href="https://www.instagram.com/paucruz5/"
-              ><i class="fa-brands fa-instagram"></i>
-            </a>
-          </button>
-        </div>
       </div>
     </div>
 
@@ -370,6 +333,50 @@
           </button>
         </div>
       </div>
+      <footer>
+        <div class="email-link">
+          <a href="mailto:paulinamc_micki@hotmail.com"
+            >paulinamc_micki@hotmail.com</a
+          >
+        </div>
+
+        <div class="container text-center">
+          <div class="row">
+            <div class="col">
+              <button type="button" class="btn social-btn">
+                <a
+                  class="social-link"
+                  target="_blank"
+                  href="https://www.linkedin.com/in/paulinamarincruz/"
+                  ><i class="fa-brands fa-linkedin"></i>
+                </a>
+              </button>
+            </div>
+
+            <div class="col">
+              <button type="button" class="btn social-btn">
+                <a
+                  class="social-link"
+                  target="_blank"
+                  href="https://www.facebook.com/paucruz5"
+                  ><i class="fa-brands fa-facebook"></i>
+                </a>
+              </button>
+            </div>
+
+            <div class="col">
+              <button type="button" class="btn social-btn">
+                <a
+                  class="social-link"
+                  target="_blank"
+                  href="https://www.instagram.com/paucruz5/"
+                  ><i class="fa-brands fa-instagram"></i>
+                </a>
+              </button>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
 
     <script src="functions.js"></script>
